# pysimdvec

./: Cargo.toml  setup.py
pysimdvec/: Cargo.toml  README.md  __init__.py  pyproject.toml  setup.py
pysimdvec/pysimdvec/: __init__.py
pysimdvec/src/: lib.rs
simdvec-core/: Cargo.toml
simdvec-core/src/: lib.rs
src/: lib.rs
