[build-system]
requires = ["setuptools>=64", "setuptools-rust>=1.8.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pysimdvec"
version = "0.1.0"
requires-python = ">=3.11"
description = "Python bindings for simdvec-core (vector add/sub/mul with zero-padding)"
authors = [{ name = "You" }]
readme = "README.md"
license = { text = "MIT OR Apache-2.0" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Rust",
  "Topic :: Scientific/Engineering",
]

